--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1996,6 +1996,17 @@
   badtrans: true  
   direct: Key to the Secret Treasure  
   literal: Mibao Zhi Yao  
+- raw: 末药
+  result: Final Remedy
+  badtrans: true
+  direct: Mo Yao
+  literal: Mo Yao
+- raw: 琉璃石
+  result: Luminous Jade Stone
+  badtrans: true
+  direct: Liu Li Shi
+  literal: Liu Li Shi
+
 
 
 # People
@@ -2644,6 +2655,37 @@
   badtrans: true  
   direct: Jing Wu Shuang  
   literal: Jing Wu Shuang  
+- raw: 任天游
+  result: Ren Tianyou
+  badtrans: true
+  direct: Ren Tianyou
+  literal: Ren Tianyou
+- raw: 武道盛
+  result: Wu Daosheng
+  badtrans: true
+  direct: Wu Dao Sheng
+  literal: Wu Dao Sheng
+- raw: 昝歌云
+  result: Zan Geyun
+  badtrans: true
+  direct: Zan Ge Yun
+  literal: Zan Ge Yun
+- raw: 永觉
+  result: Yong Jue
+  badtrans: true
+  direct: Yong Jue
+  literal: Yong Jue
+- raw: 符歌
+  result: Fu Ge
+  badtrans: true
+  direct: Fu Ge
+  literal: Fu Ge
+- raw: 孟从
+  result: Meng Cong
+  badtrans: true
+  direct: Meng Cong
+  literal: Meng Cong
+
 
 # Bosses
 - raw: 艾里甫  
@@ -3409,6 +3451,53 @@
   result: Mystery of One's Origins  
   badtrans: true
 
+# Meridians
+- raw: 冲脉
+  result: Chong Mai
+  badtrans: true
+  direct: Chong Mai
+  literal: Chong Mai
+- raw: 带脉
+  result: Dai Mai
+  badtrans: true
+  direct: Dai Mai
+  literal: Dai Mai
+- raw: 阳维
+  result: Yang Wei
+  badtrans: true
+  direct: Yang Wei
+  literal: Yang Wei
+- raw: 阴维
+  result: Yin Wei
+  badtrans: true
+  direct: Yin Wei
+  literal: Yin Wei
+- raw: 阴跷
+  result: Yin Qiao
+  badtrans: true
+  direct: Yin Qiao
+  literal: Yin Qiao
+- raw: 阳跷
+  result: Yang Qiao
+  badtrans: true
+  direct: Yang Qiao
+  literal: Yang Qiao
+- raw: 任脉
+  result: Ren Mai
+  badtrans: true
+  direct: Ren Mai
+  literal: Ren Mai
+- raw: 督脉
+  result: Du Mai
+  badtrans: true
+  direct: Du Mai
+  literal: Du Mai
+# - raw: 经脉
+#   result: Meridian Pathway
+#   badtrans: true
+#   direct: Jing Mai
+#   literal: Jing Mai
+
 # Martial Arts
 - raw: 太极心法
   result: Tai Chi Heart Method
@@ -3523,3 +3612,5 @@
   badtrans: true  
   direct: Stealing the Beam and Replacing the Pillar  
   literal: Tou Liang Huan Zhu  
+
+
