--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -248,3 +248,86 @@
   badtrans: true  
   direct: The Entrustment of  
   literal: De Weituo  
+- raw: 冲灵所窍
+  result: Gateway to Spiritual Enlightenment
+  badtrans: true
+  direct: Chong Ling Suo Qiao
+  literal: Chong Ling Suo Qiao
+- raw: 领悟
+  result: Comprehension
+  badtrans: true
+  direct: Ling Wu
+  literal: Ling Wu
+- raw: 已覆盖快速存档栏
+  result: Quick Save Slot Overwritten
+  badtrans: true
+  direct: Yi Fu Gai Kuai Su Cun Dang Lan
+  literal: Yi Fu Gai Kuai Su Cun Dang Lan
+
+
+# Names 
+- raw: 明照
+  result: Ming Zhao
+  badtrans: true
+  direct: Ming Zhao
+  literal: Ming Zhao
+- raw: 龙咎鹫
+  result: Long Jiu Jiu
+  badtrans: true
+  direct: Long Jiu Jiu
+  literal: Long Jiu Jiu
+- raw: 封于
+  result: Feng Yu
+  badtrans: true
+  direct: Feng Yu
+  literal: Feng Yu
+- raw: 公输梦
+  result: Gong Shu Meng
+  badtrans: true
+  direct: Gong Shu Meng
+  literal: Gong Shu Meng
+- raw: 年清
+  result: Nian Qing
+  badtrans: true
+  direct: Nian Qing
+  literal: Nian Qing
+- raw: 常盼春
+  result: Chang Pan Chun
+  badtrans: true
+  direct: Chang Pan Chun
+  literal: Chang Pan Chun
+- raw: 全忆之
+  result: Quan Yi Zhi
+  badtrans: true
+  direct: Quan Yi Zhi
+  literal: Quan Yi Zhi
+
+
+
+
+
+
+# Relationships
+- raw: 拜师
+  result: Apprentice to a Master
+  badtrans: true
+  direct: Bai Shi
+  literal: Bai Shi
+
+# Skill Levels
+- raw: 初学
+  result: Beginner
+  badtrans: true
+  direct: Chu Xue
+  literal: Chu Xue
+- raw: 精通
+  result: Proficient
+  badtrans: true
+  direct: Jing Tong
+  literal: Jing Tong
+- raw: 化境
+  result: Transcendent
+  badtrans: true
+  direct: Hua Jing
+  literal: Hua Jing
+
