--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -263,7 +263,38 @@
   badtrans: true
   direct: Yi Fu Gai Kuai Su Cun Dang Lan
   literal: Yi Fu Gai Kuai Su Cun Dang Lan
+- raw: 神农氏
+  result: Shennong Clan
+  badtrans: true
+  direct: Shen Nong Shi
+  literal: Shen Nong Shi
+- raw: 汉高祖
+  result: Emperor Gao of Han
+  badtrans: true
+  direct: Han Gao Zu
+  literal: Han Gao Zu
+- raw: "原贴内容："
+  result: "Original Post Content:"
+  badtrans: true
+  direct: Yuan Tie Nei Rong
+  literal: Yuan Tie Nei Rong
 
+# Questions
+- raw: 戒定慧
+  result: Morality Concentration Wisdom
+  badtrans: true
+  direct: Jie Ding Hui
+  literal: Jie Ding Hui
+- raw: 贪嗔痴
+  result: Greed Anger Ignorance
+  badtrans: true
+  direct: Tan Chen Chi
+  literal: Tan Chen Chi
+- raw: 贪嗔痴
+  result: Desire Anger Delusion
+  badtrans: true
+  direct: Tan Chen Chi
+  literal: Tan Chen Chi
 
 # Names 
 - raw: 明照
@@ -301,10 +332,116 @@
   badtrans: true
   direct: Quan Yi Zhi
   literal: Quan Yi Zhi
-
-
-
-
+- raw: 魔君姜世离
+  result: Demon Lord Jiang Shili
+  badtrans: true
+  direct: Mo Jun Jiang Shi Li
+  literal: Mo Jun Jiang Shi Li
+- raw: 行尘
+  result: Xingchen
+  badtrans: true
+  direct: Xing Chen
+  literal: Xing Chen
+- raw: 伯子越
+  result: Bo Ziyue
+  badtrans: true
+  direct: Bo Zi Yue
+  literal: Bo Zi Yue
+- raw: 杭飞双
+  result: Hang Feishuang
+  badtrans: true
+  direct: Hang Fei Shuang
+  literal: Hang Fei Shuang
+- raw: 杨老丐
+  result: Old Beggar Yang
+  badtrans: true
+  direct: Yang Lao Gai
+  literal: Yang Lao Gai
+- raw: 郑管家
+  result: Steward Zheng
+  badtrans: true
+  direct: Zheng Guan Jia
+  literal: Zheng Guan Jia
+- raw: 明寒烟
+  result: Ming Hanyan
+  badtrans: true
+  direct: Ming Han Yan
+  literal: Ming Han Yan
+- raw: 蒙鱼
+  result: Meng Yu
+  badtrans: true
+  direct: Meng Yu
+  literal: Meng Yu
+- raw: 绝夙
+  result: Jue Su
+  badtrans: true
+  direct: Jue Su
+  literal: Jue Su
+- raw: 陈管家
+  result: Steward Chen
+  badtrans: true
+  direct: Chen Guan Jia
+  literal: Chen Guan Jia
+- raw: 张音师
+  result: Master Zhang
+  badtrans: true
+  direct: Zhang Yin Shi
+  literal: Zhang Yin Shi
+- raw: 古云
+  result: Gu Yun
+  badtrans: true
+  direct: Gu Yun
+  literal: Gu Yun
+- raw: 张术
+  result: Zhang Shu
+  badtrans: true
+  direct: Zhang Shu
+  literal: Zhang Shu
+- raw: 闻者彰
+  result: Wen Zhezhang
+  badtrans: true
+  direct: Wen Zhe Zhang
+  literal: Wen Zhe Zhang
+- raw: 叹书生
+  result: Sighing Scholar
+  badtrans: true
+  direct: Tan Shu Sheng
+  literal: Tan Shu Sheng
+- raw: 关塞暮
+  result: Guan Saimu
+  badtrans: true
+  direct: Guan Sai Mu
+  literal: Guan Sai Mu
+- raw: 黄及
+  result: Huang Ji
+  badtrans: true
+  direct: Huang Ji
+  literal: Huang Ji
+- raw: 贱妾
+  result: Lowly Concubine
+  badtrans: true
+  direct: Jian Qie
+  literal: Jian Qie
+- raw: 祝青柳
+  result: Zhu Qingliu
+  badtrans: true
+  direct: Zhu Qing Liu
+  literal: Zhu Qing Liu
+- raw: 燕北飞
+  result: Yan Beifei
+  badtrans: true
+  direct: Yan Bei Fei
+  literal: Yan Bei Fei
+- raw: 战凝
+  result: Zhan Ning
+  badtrans: true
+  direct: Zhan Ning
+  literal: Zhan Ning
+- raw: 业向
+  result: Ye Xiang
+  badtrans: true
+  direct: Ye Xiang
+  literal: Ye Xiang
 
 
 # Relationships
