--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1948,7 +1948,7 @@
 - raw: 细辛
   result: Fragrant Root
   allowalt:
-    Liu Xixin
+    - Liu Xixin
   badtrans: true
   direct: Xi Xin
   literal: Xi Xin
@@ -2028,7 +2028,6 @@
   badtrans: true
   direct: Li Ying
   literal: Li Ying
-
 
 # People
 - raw: 枪士
