--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -278,6 +278,11 @@
   badtrans: true
   direct: Yuan Tie Nei Rong
   literal: Yuan Tie Nei Rong
+- raw: 一般对话组
+  result: General Conversation Group
+  badtrans: true
+  direct: Yi Ban Dui Hua Zu
+  literal: Yi Ban Dui Hua Zu
 
 # Questions
 - raw: 戒定慧
@@ -286,15 +291,15 @@
   direct: Jie Ding Hui
   literal: Jie Ding Hui
 - raw: 贪嗔痴
-  result: Greed Anger Ignorance
-  badtrans: true
-  direct: Tan Chen Chi
-  literal: Tan Chen Chi
-- raw: 贪嗔痴
   result: Desire Anger Delusion
   badtrans: true
   direct: Tan Chen Chi
   literal: Tan Chen Chi
+- raw: 眼耳鼻
+  result: Eyes Ears Nose
+  badtrans: true
+  direct: Yan Er Bi
+  literal: Yan Er Bi
 
 # Names 
 - raw: 明照
