--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Resizers\" />
     <Folder Include="Raw\Remaining\" />
     <Folder Include="Raw\SplitDb\" />
     <Folder Include="TestResults\" />
