--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -283,6 +283,8 @@
   badtrans: true
   direct: Yi Ban Dui Hua Zu
   literal: Yi Ban Dui Hua Zu
+- raw: 垂钓
+  result: Fishing
 
 # Questions
 - raw: 戒定慧
