--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -449,7 +449,11 @@
   badtrans: true
   direct: Ye Xiang
   literal: Ye Xiang
-
+- raw: 没药
+  result: Mo Yao
+  badtrans: true
+  direct: Mo Yao
+  literal: Mo Yao
 
 # Relationships
 - raw: 拜师
