--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Resizers\" />
     <Folder Include="Raw\Remaining\" />
     <Folder Include="Raw\SplitDb\" />
+    <Folder Include="TestResults\OldFiles\" />
   </ItemGroup>
 
 </Project>
