--- a/Files/Resizers/BattleEffects.yaml
+++ b/Files/Resizers/BattleEffects.yaml
@@ -7,7 +7,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
