--- a/Files/Resizers/LoadGameScreen.yaml
+++ b/Files/Resizers/LoadGameScreen.yaml
@@ -8,7 +8,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 0
@@ -24,7 +24,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -40,7 +40,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: -45
@@ -56,7 +56,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -72,7 +72,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -90,7 +90,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -107,7 +107,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -124,7 +124,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: -20
@@ -141,7 +141,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 6
@@ -158,7 +158,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -175,7 +175,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: -40
@@ -193,7 +193,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
