--- a/Files/Resizers/Minimap.yaml
+++ b/Files/Resizers/Minimap.yaml
@@ -8,7 +8,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -24,7 +24,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -39,7 +39,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -55,7 +55,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -71,7 +71,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
