--- a/Files/Resizers/QuestTracker.yaml
+++ b/Files/Resizers/QuestTracker.yaml
@@ -9,7 +9,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 0
@@ -25,7 +25,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -41,7 +41,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
