--- a/Files/Resizers/Achievements.yaml
+++ b/Files/Resizers/Achievements.yaml
@@ -7,7 +7,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 0
@@ -23,7 +23,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 40
@@ -40,7 +40,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -56,7 +56,7 @@
   overflowMode: "Overflow"
   allowWordWrap: false
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -72,7 +72,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -88,7 +88,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 0
@@ -104,7 +104,7 @@
   overflowMode: "Overflow"
   allowWordWrap: false
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
@@ -120,7 +120,7 @@
   overflowMode: "Overflow"
   allowWordWrap: false
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: true
   pathIsRegex: false
   adjustX: 0
@@ -136,7 +136,7 @@
   overflowMode: "Overflow"
   allowWordWrap: true
   allowAutoSizing: false
-  allowPartialPath: true
+  allowPartialPath: false
   allowLeftTrimText: false
   pathIsRegex: false
   adjustX: 0
