--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -285,6 +285,26 @@
   literal: Yi Ban Dui Hua Zu
 - raw: 垂钓
   result: Fishing
+- raw: 品阶  
+  result: Rank  
+  badtrans: true  
+  direct: Grade  
+  literal: Pin jie  
+- raw: 五行详情  
+  result: Five Elements Details  
+  badtrans: true  
+  direct: Five Elements Details  
+  literal: Wu xing xiang qing  
+- raw: 武林新秀  
+  result: Wulin Rising Star  
+  badtrans: true  
+  direct: Martial Arts New Talent  
+  literal: Wu lin xin xiu  
+- raw: "在《论语》中，“己所不欲，勿施于人”的含义是？"
+  result: What is the meaning of 'Do not impose on others what you do not desire' in the Analects?  
+  badtrans: true  
+  direct: In the Analects, what is the meaning of "What you do not want, do not impose on others"?  
+  literal: Zai "Lun Yu" zhong, "Ji suo bu yu, wu shi yu ren" de han yi shi?  
 
 # Questions
 - raw: 戒定慧
