--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -305,6 +305,25 @@
   badtrans: true  
   direct: In the Analects, what is the meaning of "What you do not want, do not impose on others"?  
   literal: Zai "Lun Yu" zhong, "Ji suo bu yu, wu shi yu ren" de han yi shi?  
+- raw: 前辈未必太看得起在下了。  
+  result: Senior, you may think too highly of me.  
+  badtrans: true  
+  direct: Elder may not think too highly of me.  
+  literal: Qian bei wei bi tai kan de qi zai xia le.  
+- raw: 宝贝？村子里？  
+  result: Treasure? In the village?  
+  badtrans: true  
+  direct: Baby? In the village?  
+  literal: Bao bei? Cun zi li? 
+- raw: "<size=26>已持有:</size>"
+  result: "<size=16>Holding:</size>"
+- raw: 墨  
+  result: Mo
+  badtrans: true  
+  direct: Ink  
+  literal: Mo  
+
+
 
 # Questions
 - raw: 戒定慧
@@ -474,6 +493,12 @@
   badtrans: true
   direct: Mo Yao
   literal: Mo Yao
+- raw: 候盛  
+  result: Hou Sheng  
+  badtrans: true  
+  direct: Hou Sheng  
+  literal: Hou Sheng  
+
 
 # Relationships
 - raw: 拜师
