--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -542,6 +542,11 @@
   badtrans: true  
   direct: Zhao Er Gou  
   literal: Zhao er gou  
+- raw: 无  
+  result: None  
+  badtrans: true  
+  direct: None  
+  literal: Wu  
 
 # Relationships
 - raw: 拜师
